codepkg/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>AdminAmountDisbursed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Admin Amount Disbursed for the Project.</description>
        <inlineHelpText>Total State Admin Amount Disbursed for the Project. Payment by State Controller&apos;s Office has been confirmed by Cal OES Accounting.</inlineHelpText>
        <label>Admin Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Allowance_10_per__c</fullName>
        <formula>( Total_State_Amount_Available__c  / 10)  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Allowance 10 per</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allow_System_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Even if External Id is not null, it will allow the system calculations.</description>
        <inlineHelpText>Even if External Id is not null, it will allow the system calculations.</inlineHelpText>
        <label>Allow System Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmountAvailable__c</fullName>
        <description>Amount available for this Project.</description>
        <formula>Total_Project_Award__c  - TotalProjectLocalAward__c  -   TotalAmountDisbursed__c</formula>
        <inlineHelpText>Amount available for this Project.
[ Total Project Award - Total Project Local Award - Amount Disbursed ]</inlineHelpText>
        <label>Total Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_State_Payment_Amount__c</fullName>
        <description>This field in sum of &quot;Total State Amount Approved&quot; and &quot;Total Admin Amount Approved&quot;.</description>
        <formula>Total_State_Amount_Approved__c +  Total_Admin_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field in sum of &quot;Total State Amount Approved&quot; and &quot;Total Admin Amount Approved&quot;. 
[ Total State Amount Approved + Total Admin Amount Approved ]</inlineHelpText>
        <label>Approved State Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_FirstName__c</fullName>
        <description>The FirstName of Primary Authorized agent for Docusign Template</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The FirstName of Primary Authorized agent for Docusign Template</inlineHelpText>
        <label>Authorized Agent FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_LastName__c</fullName>
        <description>The LastName of Primary Authorized agent for Docusign Template</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The LastName of Primary Authorized agent for Docusign Template</inlineHelpText>
        <label>Authorized Agent LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_Salutation__c</fullName>
        <description>The salutation of Primary Authorized agent for Docusign Template</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The salutation of Primary Authorized agent for Docusign Template</inlineHelpText>
        <label>Authorized Agent Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Agent_Title__c</fullName>
        <description>The Title of Primary Authorized agent for Docusign Template</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Title of Primary Authorized agent for Docusign Template</inlineHelpText>
        <label>Authorized Agent Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableAdminAmount__c</fullName>
        <description>Total Admin Amount Available for this Project.</description>
        <formula>TotalProjectStateAdminShare__c - AdminAmountDisbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Admin Amount Available for this Project.
[ Total Project State Admin Share - Admin Amount Disbursed ]</inlineHelpText>
        <label>Admin Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalOES_ID__c</fullName>
        <formula>Obligating_Sub_Recipient__r.OES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalOES ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalOES_Project_Number__c</fullName>
        <description>Number assigned by CalOES to a project before it is approved by FEMA. This number is used internally to track projects across the application and payment steps of a given program.</description>
        <displayFormat>PRN-{000000}</displayFormat>
        <inlineHelpText>Automated number assigned by Cal OES and used internally by FPD to track projects and payments.</inlineHelpText>
        <label>CalOES Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cal_OES_ID__c</fullName>
        <description>This field to identify if the Subrecipient is a regular Subrecipient, or a Child Subrecipient (i.e. funds are obligated to Parent Subrecipient entity).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is to identify if the Subrecipient is a Parent Subrecipient or a Child Subrecipient. [ FIPS ID + 2 ]</inlineHelpText>
        <label>Cal OES ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseOut_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CloseOut Task</label>
        <referenceTo>Closeout_Task__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closeout Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closeout_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Request</label>
        <referenceTo>Closeout_Request__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cumulative_State_Cost_Share_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Sum of State Amount Requested and Admin Amount Requested of all the Projects of this Incident and Sub Recipient is greater than or equal to 2500 then this Checkbox will be checked or else unchecked.</description>
        <inlineHelpText>If the Sum of State Amount Requested and Admin Amount Requested of all the Projects of this Incident and Sub Recipient is greater than or equal to 2500 then this Checkbox will be checked or else unchecked.</inlineHelpText>
        <label>Cumulative State Cost Share Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Date_for_Form__c</fullName>
        <formula>TODAY()</formula>
        <label>Current Date for Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUNS_Expiration_Date__c</fullName>
        <description>DUNS Expiration Date of Obligating Sub Recipient.</description>
        <formula>Obligating_Sub_Recipient__r.DUNS_Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when the DUNS registration expires on SAM.gov</inlineHelpText>
        <label>SAM Registration Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Category__c</fullName>
        <description>PA Project Damage Category</description>
        <inlineHelpText>FEMA Category assigned to the Project</inlineHelpText>
        <label>Damage Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A: Debris Removal</fullName>
                </value>
                <value>
                    <fullName>B: Emergency Protective Measures</fullName>
                </value>
                <value>
                    <fullName>C: Roads and Bridges</fullName>
                </value>
                <value>
                    <fullName>D: Water Control Facilities</fullName>
                </value>
                <value>
                    <fullName>E: Public buildings and contents</fullName>
                    <label>E: Public Buildings and Contents</label>
                </value>
                <value>
                    <fullName>F: Public Utilities</fullName>
                </value>
                <value>
                    <fullName>G: Parks, Recreational and Other Facilities</fullName>
                </value>
                <value>
                    <fullName>H: Fire Management</fullName>
                </value>
                <value>
                    <fullName>Z: Management Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Project_Marked_100_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Project Marked 100% Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <description>Declaration Number of the Incident.</description>
        <formula>Incident_Name__r.Declaration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Declaration Number assigned to a Disaster/Incident.</inlineHelpText>
        <label>Declaration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A Description of the Project and its scope of work.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A Description of the Project and its scope of work.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disaster_Grant_FO_Name__c</fullName>
        <formula>Funding_Opportunity_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disaster Grant/FO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibleforStateAdminShare__c</fullName>
        <description>If the Project is eligible for State Admin Share?</description>
        <inlineHelpText>Indicates whether or not the project is eligible for State Admin Share</inlineHelpText>
        <label>Eligible for State Admin Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Template_NSPO__c</fullName>
        <formula>IF( AND(FIPS_ID__c  !=null , CalOES_Project_Number__c !=null,  CalOES_ID__c !=null),
   Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ FIPS_ID__c +&quot;/&quot;+ CalOES_Project_Number__c +&quot;/&quot;+ CalOES_ID__c,
   
   IF( AND(FIPS_ID__c  !=null , CalOES_Project_Number__c !=null,  CalOES_ID__c ==null),
   Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ FIPS_ID__c +&quot;/&quot;+ CalOES_Project_Number__c , 
   
		IF( AND(FIPS_ID__c  !=null , CalOES_Project_Number__c ==null,  CalOES_ID__c !=null),
		Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ FIPS_ID__c +&quot;/&quot;+ CalOES_ID__c , 
		
		IF( AND(FIPS_ID__c  ==null , CalOES_Project_Number__c !=null,  CalOES_ID__c !=null),
		Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ CalOES_Project_Number__c +&quot;/&quot;+ CalOES_ID__c,
		
		IF( AND(FIPS_ID__c  !=null , CalOES_Project_Number__c ==null,  CalOES_ID__c ==null),
        Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ FIPS_ID__c,
		
		IF( AND(FIPS_ID__c  ==null , CalOES_Project_Number__c !=null,  CalOES_ID__c ==null),
        Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ CalOES_Project_Number__c, 
		
		IF( AND(FIPS_ID__c  ==null , CalOES_Project_Number__c ==null,  CalOES_ID__c !=null),
        Obligated_Sub_Recipient_Formula__c+&quot;/&quot;+ CalOES_ID__c, Obligated_Sub_Recipient_Formula__c)
         ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template NSPO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of Project Work Completed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End Date of Project Work</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expenditure_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the highest amount in the Expenditures to Date field on the PR.</description>
        <inlineHelpText>This is the up-to-date Total Project Costs the Subrecipient has submitted to Cal OES.</inlineHelpText>
        <label>Cumulative Expenditures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FEMA_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FEMA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEMA_Project_Number__c</fullName>
        <description>Project Name - FEMA</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Project Name - FEMA</inlineHelpText>
        <label>FEMA Project Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The FEMA Cost Share for this Project. The values are inherited from the Program Cost Share.</description>
        <inlineHelpText>Percentage of the Project Amount ($) that will be paid by FEMA.  Equal to the Federal Share ($) divided by the Project Amount ($).</inlineHelpText>
        <label>FEMA Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FFATA_Expiration_Date__c</fullName>
        <description>FFATA Expiration Date of Obligating Sub Recipient.</description>
        <formula>Obligating_Sub_Recipient__r.FFATAExpirationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date that the current FFATA expires for the Subrecipient. Must be renewed annually.</inlineHelpText>
        <label>FFATA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIPS_ID__c</fullName>
        <description>&quot;FIPS ID&quot; of the &quot;Obligated Sub Recipient&quot; of the Project.</description>
        <formula>Obligating_Sub_Recipient__r.Sub_Recipient_FIPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cal OES-generated ID number for Subreceipeint, used by multiple State partners.</inlineHelpText>
        <label>FIPS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalAmountAvailable__c</fullName>
        <description>Federal Amount available for this Project.</description>
        <formula>Federal_Project_Award__c -  FederalAmountDisbursed__c</formula>
        <inlineHelpText>Federal Amount available for this Project.
[ Total Project Federal Award - Total Federal Amount Disbursed ]</inlineHelpText>
        <label>Federal Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FederalAmountDisbursed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total federal Amount Disbursed for this Project(Payment is Done).</description>
        <inlineHelpText>Total Federal Amount Disbursed for the Project. Payment by State Controller&apos;s Office has been confirmed by Cal OES Accounting.</inlineHelpText>
        <label>Federal Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Project_Award_W_O_Retention__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Federal Project Award - Total Federal Retention on Project</description>
        <inlineHelpText>Federal Project Award - Total Federal Retention on Project</inlineHelpText>
        <label>Federal Project Award W/O Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Project_Award__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Federal Amount awarded to the Project.</description>
        <inlineHelpText>This is the Total Amount of money FEMA has awarded for this Project.</inlineHelpText>
        <label>Federal Project Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Retention_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Federal Retention To Date on Project</description>
        <inlineHelpText>Federal Retention To Date on Project</inlineHelpText>
        <label>Federal Retention To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Retention__c</fullName>
        <description>The Percent Amount withheld by CalOES as retention on Federal Funds. The standard is 0%.</description>
        <inlineHelpText>The Percent Amount withheld by CalOES as retention on Federal Funds. The standard is 0%. If this is a Large Project &lt; 100% complete, Project Funds will be paid on a reimbursement basis with 10% retention.</inlineHelpText>
        <label>Federal Retention %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <description>Funding Source of the Project.</description>
        <inlineHelpText>Select &quot;Federal Only,&quot; &quot;State Only,&quot; or &quot;Federal and State&quot; according to Subrecipient, Incident, and Category eligibility.</inlineHelpText>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal and State</fullName>
                </value>
                <value>
                    <fullName>Federal Only</fullName>
                </value>
                <value>
                    <fullName>State Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Funding Opportunity Name</description>
        <inlineHelpText>Specific Funding Opportunity for the Grant (Program+Incident+Declaration Number).</inlineHelpText>
        <label>Disaster Grant/FO</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Name_Formula__c</fullName>
        <description>This field is a formula field of Incident Name which would be visible to Portal Users</description>
        <formula>Incident_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The name of the Incident</description>
        <inlineHelpText>Disaster/Incident for which the project is related. Not all projects will have an associated Incident.</inlineHelpText>
        <label>Incident Name</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look Up to Incident Sub Recipient Summary which is having the same Sub Recipient and same Incident as the Project.</description>
        <inlineHelpText>Links to summary of all Projects within this Incident for this Subrecipient.</inlineHelpText>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <formula>TEXT( Incident_Name__r.Incident_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLargeProject__c</fullName>
        <description>If the Project is a Large Project/Small Project?</description>
        <formula>IF( OR ( ISPICKVAL( FundingSource__c , &apos;State Only&apos;), AND( OR(ISPICKVAL( FundingSource__c , &apos;Federal Only&apos;), ISPICKVAL(FundingSource__c , &apos;Federal And State&apos;)),  Total_Project_Award__c &gt;= Incident_Name__r.Federal_Small_Project_Threshold__c)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, this project meets the FEMA Large Project threshold. The threshold applies to PA grants only and varies from year to year.</inlineHelpText>
        <label>Large Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Last_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Last Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Project_Version__c</fullName>
        <description>The latest version of Project Number, driven from the Latest Amendment available on the Project.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The latest version of Project Number, driven from the Latest Amendment available on the Project.</inlineHelpText>
        <label>Latest Project Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Supplement_Number__c</fullName>
        <description>The supplement Number of the Latest Amendment available on the Project.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The supplement Number of the Latest Amendment available on the Project.</inlineHelpText>
        <label>Latest Supplement Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_OES_Project_Number__c</fullName>
        <description>Legacy OES Project Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Legacy OES Project Number for migrated records, if applicable.</inlineHelpText>
        <label>Legacy OES Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Local Cost Share of the Project.</description>
        <inlineHelpText>Local Cost Share of the Project.
[100 - (FEMA Share + State Share)]</inlineHelpText>
        <label>Local Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manager_Approved_Date__c</fullName>
        <description>The Date on which Manager had Approved the Project for Initial Obligation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Date on which Manager had Approved the Project for Initial Obligation.</inlineHelpText>
        <label>Manager Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manger user who has approved the Project for Initial Obligation.</description>
        <inlineHelpText>Manger user who has approved the Project for Initial Obligation.</inlineHelpText>
        <label>Manager User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manually_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Migrated Record is Updated Manually then this field Should be checked</description>
        <inlineHelpText>If Migrated Record is Updated Manually then this field Should be checked</inlineHelpText>
        <label>Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Admin_Amount_Available__c</fullName>
        <description>Pending Admin Amount Available on the Project.</description>
        <formula>TotalProjectStateAdminShare__c -  Total_Admin_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending Admin Amount Available on the Project.
[ Total Project State Admin Share - Total Admin Amount Approved ]</inlineHelpText>
        <label>Pending Admin Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Federal_Amount_Available__c</fullName>
        <description>Pending Federal Amount Available on the Project.</description>
        <formula>Federal_Project_Award__c -  ( Total_Federal_Amount_Approved__c + Federal_Retention_To_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending Federal Amount Available on the Project.
[ Total Project Federal Award -  (Total Federal Amount Approved + Federal Retention To Date) ]</inlineHelpText>
        <label>Pending Federal Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_State_Amount_Available__c</fullName>
        <description>Pending State Amount Available on the Project.</description>
        <formula>State_Project_Award__c - ( Total_State_Amount_Approved__c + State_Retention_To_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending State Amount Available on the Project.
[ Total Project State Award - (Total State Amount Approved + State Retention To Date)]</inlineHelpText>
        <label>Pending State Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Obligated_State_Share_Flag__c</fullName>
        <description>This field value is Green when the sum of &quot;State Project Award&quot; of all the Projects related to the Incident Sub Recipient Summary of the Project record is greater than or equal to $2500, or else should be Red.</description>
        <formula>IMAGE ( IF( Obligated_State_Share__c = false, &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;Status Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field value is Green when the sum of &quot;State Project Award&quot; of all the Projects related to the Incident Sub Recipient Summary of the Project record is greater than or equal to $2500, or else should be Red.</inlineHelpText>
        <label>Obligated State Share Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligated_State_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field value is checked when the sum of &quot;State Project Award&quot; of all the Projects related to the Incident Sub Recipient Summary of this Project record is greater than or equal to $2500, or else should be unchecked.</description>
        <inlineHelpText>This field value is checked when the sum of &quot;State Project Award&quot; of all the Projects related to the Incident Sub Recipient Summary of this Project record is greater than or equal to $2500, or else should be unchecked.</inlineHelpText>
        <label>Obligated State Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obligated_Sub_Recipient_Formula__c</fullName>
        <description>This field is formula field of Obligated Sub - Recipient to show the data on Portal</description>
        <formula>Obligating_Sub_Recipient__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obligated Sub - Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligating_Sub_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required because the documents 130 and 130SA creation depends upon Sub-recipient Entity Type.</description>
        <inlineHelpText>The Subrecipient for which the project has been obligated.</inlineHelpText>
        <label>Obligated Sub - Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obligation_Date__c</fullName>
        <description>Obligation Date of the Project.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Obligation Date of the Project.</inlineHelpText>
        <label>Obligation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Program_Name__c</fullName>
        <formula>Program_Name__r.Parent_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaytoStateAdmin__c</fullName>
        <description>Eligible to pay State Admin or not?</description>
        <inlineHelpText>Does this Project meet criteria making Eligible to pay State Admin or not?</inlineHelpText>
        <label>Pay to State Admin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Admin_Amount_Disbursed__c</fullName>
        <description>This field is subtraction of &quot;Total Admin Amount Requested&quot; and &quot;Total Admin Amount Approved&quot; on the Project.</description>
        <formula>Total_Admin_Amount_Requested__c - Total_Admin_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is subtraction of &quot;Total Admin Amount Requested&quot; and &quot;Total Admin Amount Approved&quot; on the Project.
[ Total Admin Amount Requested - Total Admin Amount Approved ]</inlineHelpText>
        <label>Pending Admin Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Federal_Amount_Disbursed__c</fullName>
        <description>This field is subtraction of the &quot;Total Federal Amount Requested&quot; and &quot;Total Federal Amount Approved&quot; on the Project.</description>
        <formula>Total_Federal_Amount_Requested__c -  Total_Federal_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is subtraction of the &quot;Total Federal Amount Requested&quot; and &quot;Total Federal Amount Approved&quot; on the Project.
[ Total Federal Amount Requested - Total Federal Amount Approved ]</inlineHelpText>
        <label>Pending Federal Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>